<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Book Store</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="title_activity_view_book">View Book</string>
    <string name="title_activity_checkout">Checkout</string>

    <string name="add">Add</string>
    <string name="checkout">Checkout</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>

    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="isbn">ISBN:</string>

    <string name="checkoutName">Name:</string>
    <string name="checkoutEmail">Email:</string>
    <string name="checkoutAccount">Credit Account:</string>
    <string name="checkoutAddress">Address:</string>

    <string name="empty_cart">THE CART IS EMPTY!</string>

    <string name="checkoutMessage" formatted="false">Sent order for %d book(s)</string>
    <string name="checkoutMessageEmpty">Empty cart, not sending order</string>
</resources>
