<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:scrollbars="vertical">

	<TextView android:id="@+id/title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="" />

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkoutName"
        android:labelFor="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""/>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkoutEmail"
        android:labelFor="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text=""/>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkoutAccount"
        android:labelFor="@+id/credit" />

    <EditText
        android:id="@+id/credit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""/>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkoutAddress"
        android:labelFor="@+id/address" />

    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="textPostalAddress"
        android:text=""/>
</LinearLayout>
